Delete tasks, rename events to tasks
