# internal/service/handler/tasks.go
@@ -8,10 +8,9 @@ import (
 	"github.com/Dyleme/Notifier/internal/service/handler/api"
 	"github.com/Dyleme/Notifier/pkg/http/requests"
 	"github.com/Dyleme/Notifier/pkg/http/responses"
-	"github.com/Dyleme/Notifier/pkg/utils"
 )
 
-func (t EventHandler) ListTasks(w http.ResponseWriter, r *http.Request, params api.ListTasksParams) {
+func (t TaskHandler) ListTasks(w http.ResponseWriter, r *http.Request, params api.ListTasksParams) {
 	userID, err := authmiddleware.UserIDFromCtx(r.Context())
 	if err != nil {
 		responses.Error(w, http.StatusInternalServerError, err)
@@ -21,71 +20,31 @@ func (t EventHandler) ListTasks(w http.ResponseWriter, r *http.Request, params a
 
 	listParams := parseListParams(params.Offset, params.Limit)
 
-	tasks, err := t.serv.ListUserTasks(r.Context(), userID, listParams)
-	if err != nil {
-		responses.KnownError(w, err)
-
-		return
-	}
-	apiTasks := utils.DtoSlice(tasks, mapAPITask)
-
-	responses.JSON(w, http.StatusOK, apiTasks)
-}
-
-func (t EventHandler) AddTask(w http.ResponseWriter, r *http.Request) {
-	userID, err := authmiddleware.UserIDFromCtx(r.Context())
-	if err != nil {
-		responses.Error(w, http.StatusInternalServerError, err)
-
-		return
-	}
-
-	var addTaskBody api.AddTaskJSONRequestBody
-	err = requests.Bind(r, &addTaskBody)
-	if err != nil {
-		responses.Error(w, http.StatusBadRequest, err)
-
-		return
-	}
-
-	task := mapAddTaskReq(addTaskBody, userID)
-	createdTask, err := t.serv.AddTask(r.Context(), task)
+	tasks, err := t.serv.ListTasks(r.Context(), userID, listParams)
 	if err != nil {
 		responses.KnownError(w, err)
 
 		return
 	}
 
-	responses.JSON(w, http.StatusCreated, mapAPITask(createdTask))
+	responses.JSON(w, http.StatusOK, tasks)
 }
 
-func mapAddTaskReq(body api.AddTaskJSONRequestBody, userID int) domains.Task {
-	return domains.Task{ //nolint:exhaustruct // TODO: use separate struct for creation
-		UserID: userID,
-		Text:   body.Message,
-	}
+func (t TaskHandler) PostTaskSetTaskID(w http.ResponseWriter, r *http.Request, taskID int) {
+	responses.JSON(w, http.StatusOK, taskID)
 }
 
-func mapUpdateTaskReq(body api.UpdateTaskReqBody, taskID, userID int) domains.Task {
-	return domains.Task{
-		ID:       taskID,
-		UserID:   userID,
-		Text:     body.Message,
-		Periodic: body.Periodic,
-		Archived: body.Archived,
-	}
-}
-
-func mapAPITask(task domains.Task) api.Task {
+func mapAPITask(task domains.BasicTask) api.Task {
 	return api.Task{
-		Id:       task.ID,
-		Message:  task.Text,
-		Archived: task.Archived,
-		Periodic: task.Periodic,
+		Description: &task.Description,
+		Done:        false,
+		Id:          task.ID,
+		Start:       task.Start,
+		Text:        task.Text,
 	}
 }
 
-func (t EventHandler) GetTask(w http.ResponseWriter, r *http.Request, taskID int) {
+func (t TaskHandler) GetTask(w http.ResponseWriter, r *http.Request, taskID int) {
 	userID, err := authmiddleware.UserIDFromCtx(r.Context())
 	if err != nil {
 		responses.Error(w, http.StatusInternalServerError, err)
@@ -93,17 +52,19 @@ func (t EventHandler) GetTask(w http.ResponseWriter, r *http.Request, taskID int
 		return
 	}
 
-	task, err := t.serv.GetTask(r.Context(), taskID, userID)
+	task, err := t.serv.GetTask(r.Context(), userID, taskID)
 	if err != nil {
 		responses.KnownError(w, err)
 
 		return
 	}
 
-	responses.JSON(w, http.StatusOK, mapAPITask(task))
+	apiTask := mapAPITask(task)
+
+	responses.JSON(w, http.StatusOK, apiTask)
 }
 
-func (t EventHandler) UpdateTask(w http.ResponseWriter, r *http.Request, taskID int) {
+func (t TaskHandler) UpdateTask(w http.ResponseWriter, r *http.Request, taskID int) {
 	userID, err := authmiddleware.UserIDFromCtx(r.Context())
 	if err != nil {
 		responses.Error(w, http.StatusInternalServerError, err)
@@ -111,22 +72,78 @@ func (t EventHandler) UpdateTask(w http.ResponseWriter, r *http.Request, taskID 
 		return
 	}
 
-	var reqBody api.UpdateTaskJSONRequestBody
-	err = requests.Bind(r, &reqBody)
-	if err != nil {
-		responses.Error(w, http.StatusBadRequest, err)
-
-		return
-	}
-
-	task := mapUpdateTaskReq(reqBody, userID, taskID)
-
-	err = t.serv.UpdateTask(r.Context(), task)
+	var updateBody api.UpdateTaskJSONRequestBody
+	err = requests.Bind(r, &updateBody)
 	if err != nil {
 		responses.KnownError(w, err)
 
 		return
 	}
+	description := ""
+	if updateBody.Description != nil {
+		description = *updateBody.Description
+	}
 
-	responses.Status(w, http.StatusOK)
+	task, err := t.serv.UpdateBasicTask(r.Context(), domains.BasicTask{
+		ID:                 taskID,
+		UserID:             userID,
+		Text:               description,
+		Description:        description,
+		Start:              updateBody.Start,
+		NotificationParams: nil,
+	}, userID)
+	if err != nil {
+		responses.Error(w, http.StatusInternalServerError, err)
+
+		return
+	}
+
+	apiTask := mapAPITask(task)
+
+	responses.JSON(w, http.StatusOK, apiTask)
+}
+
+func mapCreateTask(body api.CreateTaskReqBody, userID int) domains.BasicTask {
+	description := ""
+	if body.Description != nil {
+		description = *body.Description
+	}
+
+	task := domains.BasicTask{ //nolint:exhaustruct //creation object we don't know ids
+		UserID:             userID,
+		Text:               body.Message,
+		Description:        description,
+		Start:              body.Start,
+		NotificationParams: nil,
+	}
+
+	return task
+}
+
+func (t TaskHandler) CreateTask(w http.ResponseWriter, r *http.Request) {
+	userID, err := authmiddleware.UserIDFromCtx(r.Context())
+	if err != nil {
+		responses.Error(w, http.StatusInternalServerError, err)
+
+		return
+	}
+
+	var createBody api.CreateTaskReqBody
+	err = requests.Bind(r, &createBody)
+	if err != nil {
+		responses.KnownError(w, err)
+
+		return
+	}
+	task := mapCreateTask(createBody, userID)
+	createdTask, err := t.serv.CreateTask(r.Context(), task)
+	if err != nil {
+		responses.Error(w, http.StatusInternalServerError, err)
+
+		return
+	}
+
+	apiTask := mapAPITask(createdTask)
+
+	responses.JSON(w, http.StatusOK, apiTask)
 }
